// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle the add command 1`] = `
Array [
  Object {
    "message": "What's the name of the reminder?",
    "name": "name",
    "type": "input",
  },
  Object {
    "choices": Array [
      "Custom",
      "Today",
      "Tomorrow",
      "In two days",
      "Next week",
      "In two weeks",
      "Next month",
      "In two months",
    ],
    "filter": [Function],
    "message": "What's the due date of the reminder?",
    "name": "date",
    "type": "list",
  },
  Object {
    "message": "What's the due date of the reminder?",
    "name": "date",
    "type": "input",
    "when": [Function],
  },
  Object {
    "message": "What's the time of the reminder?",
    "name": "time",
    "type": "input",
  },
]
`;

exports[`should handle the add command with args 1`] = `
Array [
  Object {
    "choices": Array [
      "Custom",
      "Today",
      "Tomorrow",
      "In two days",
      "Next week",
      "In two weeks",
      "Next month",
      "In two months",
    ],
    "filter": [Function],
    "message": "What's the due date of the reminder?",
    "name": "date",
    "type": "list",
  },
  Object {
    "message": "What's the due date of the reminder?",
    "name": "date",
    "type": "input",
    "when": [Function],
  },
  Object {
    "message": "What's the time of the reminder?",
    "name": "time",
    "type": "input",
  },
]
`;
